syntax = "proto3";

package protobuf;

option java_package = "edu.snu.vortex.runtime.common.comm";
option java_outer_classname = "ControlMessage";

enum MessageType {
    TaskGroupStateChanged = 0;
    ScheduleTaskGroup = 1;
}

message Message {
    MessageType type = 1;
    oneof messageTypes {
        TaskGroupStateChangedMsg taskStateChangedMsg = 2;
        ScheduleTaskGroupMsg scheduleTaskGroupMsg = 3;
    }
}

message TaskGroupStateChangedMsg {
    string taskGroupId = 1;
    TaskGroupStateFromExecutor state = 2;
    repeated string failedTaskIds = 3;
}

message ScheduleTaskGroupMsg {
    string taskGroupId = 1;
    bytes taskGroup = 2;
}

enum TaskGroupStateFromExecutor {
    READY = 0;
    EXECUTING = 1;
    COMPLETE = 2;
    FAILED_RECOVERABLE = 3;
    FAILED_UNRECOVERABLE = 4;
}